2006-10-31 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* christine: Import files improvement
	* lib_christine/library.py: Import files improvement.
	* gui/main_window.glade: Shrink in queue list.
		- Fixed bug in search box packing method
		- Browser and View Browser menuitem hided (This will dissappear soon)
2006-08-29 Marco Antonio Islas Cruz <markuz@islascruz.org>
	* christine: Rewrite the filter method in order to make
	the browser work. Need more tests. refilter on new artist
	selected.
	* lib_christine/libs_christine: expose_cb call on new location 
	setted.
	* gui/main_window.glade: Player space reallocated.
2006-06-26  gettextize  <bug-gnu-gettext@gnu.org>
	* Makefile.am (EXTRA_DIST): Add config.rpath, mkinstalldirs, m4/ChangeLog.
	* christine: about now uses the new about class
	* lib_christine/about.py.in: created.
	* Package: autotoolized

2006-06-22 Marco Antonio Islas <markuz@islascruz.org>
	* christine: Import to queue ready!!
	* gui/main_window.glade: handler to import to queue menu item
	* lib_christine/libs_christine: Video player is now available again!!
2006-06-09 Marco Antonio Islas <markuz@islascruz.org>
	* christine: Search and browse bugfix,
	Bugfix in control radiobuttons
	* gui/properties.glade: labels renamed, added video-codec label
	* lib_christine/show_properties.py: class finished
	* gui/popupmenu.glade: added properties item
2006-06-07 Marco Antonio Islas <markuz@islascruz.org>
	* lib_christine/library.py: Queue reordering is enable
2006-06-04 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: Filtering options are improved to work with minilists
				- Filtering bugfix
				- Browser show/hide gconfized
	* lib_chrsitine/library.py: Minilist filering stuff
2006-06-02 Marco Antonio Islas <markuz@islascruz.org>
	* Christine: On jump_to function, now pressing Enter on any
	spin button will cause an OK press button signal
2006-05-19 Marco Antonio Islas <markuz@islascruz.org>
	* ChangeLog: Created ChangeLog